feature: new component: post_detail and changes to different components

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,13 @@
-body{
-    background-color: #ddd;
+body {
+  background-color: #fdfbfb;
+}
+
+.header-section {
+  margin-top: 3em;
+}
+
+.categories {
+  margin-top: 1em;
+  display: flex;
+  justify-content: center;
 }
