--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 body {
   background-color: #fcf8f8;
+  margin: 3em;
 }
 
 .header-section {
@@ -10,12 +11,18 @@ body {
   text-align: center;
 }
 
-h2.header-categories {
+h3.header-categories {
   margin-bottom: 1em;
 }
 
 .categories {
   margin-top: 1em;
+  margin-bottom: 2em;
+  display: flex;
+  justify-content: center;
+}
+
+.empty-category {
   display: flex;
   justify-content: center;
 }
@@ -49,6 +56,20 @@ h2.header-categories {
 .btn-add,
 .add-btn-post {
   margin-left: 12em;
+  margin-top: 2em;
   display: flex;
   justify-content: flex-start;
+}
+
+.add-post-form {
+  margin-left: 11em;
+  margin-right: 11em;
+}
+
+.text {
+  margin-bottom: 1.5em;
+}
+
+.ui.form textarea {
+  margin-bottom: 1.5em;
 }
