--- a/src/App.css
+++ b/src/App.css
@@ -15,9 +15,39 @@ h3.header-categories {
   margin-bottom: 1em;
 }
 
+div.header,
+h3.header {
+  color: #00b5ad;
+  font-size: 1.5em;
+  padding: 1em;
+}
+
+div.header:hover,
+h3.header:hover {
+  color: #009c95;
+}
+
+.author,
+.time,
+.votes,
+.comments {
+  color: #adadad;
+  font-size: 0.95em;
+  padding-right: 1em;
+  margin: 0 0 0.5em 1.2em;
+}
+
+.author,
+.time {
+  display: inline-block;
+}
+
+.post-body {
+  margin-left: 1.2em;
+}
+
 .categories {
-  margin-top: 1em;
-  margin-bottom: 2em;
+  margin: 1em 0 2em 0;
   display: flex;
   justify-content: center;
 }
@@ -55,15 +85,13 @@ h3.header-categories {
 
 .btn-add,
 .add-btn-post {
-  margin-left: 12em;
-  margin-top: 2em;
+  margin: 2em 0 6em 12em;
   display: flex;
   justify-content: flex-start;
 }
 
 .add-post-form {
-  margin-left: 11em;
-  margin-right: 11em;
+  margin: 0 11em 0 11em;
 }
 
 .text {
