--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,13 @@ h3.header-categories {
   margin-bottom: 1em;
 }
 
+.categories {
+  margin-top: 1em;
+  margin-bottom: 1.5em;
+  display: flex;
+  justify-content: center;
+}
+
 div.header,
 h3.header {
   color: #00b5ad;
@@ -45,12 +52,6 @@ h3.header:hover {
 .post-body,
 .comment-body {
   margin-left: 1.2em;
-}
-
-.categories {
-  margin: 1em 0 2em 0;
-  display: flex;
-  justify-content: center;
 }
 
 .empty-category {
@@ -91,6 +92,14 @@ h3.header:hover {
   justify-content: flex-start;
 }
 
+button.ui.teal.large.compact.button {
+  margin-bottom: 6em;
+}
+
+i.red.thumbs.down {
+  margin-left: 0.5em;
+}
+
 .add-post-form {
   margin: 0 11em 0 11em;
 }
@@ -105,4 +114,31 @@ h3.header:hover {
 
 .ui.form textarea {
   margin-bottom: 1.5em;
+}
+
+.sort {
+  margin-left: 5em;
+  display: flex;
+  justify-content: center;
+  font-size: 10px;
+}
+
+.ui.selection.dropdown {
+  border: 1px solid #00b5ad;
+  color: #00b5ad;
+  min-width: 10em;
+}
+
+.ui.selection.dropdown:hover {
+  border: 1px solid #009c95;
+  color: #009c95;
+}
+
+span.text {
+  color: #00b5ad;
+  font-size: 10px;
+}
+
+span.text:hover {
+  color: #009c95;
 }
