--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,15 @@ body {
   margin: 3em;
 }
 
+.container {
+  margin-right: 10em;
+  margin-left: 10em;
+}
+
+.menu-btn {
+  min-width: 6em;
+}
+
 .header-section {
   margin-top: 3em;
 }
@@ -16,6 +25,7 @@ h3.header-categories {
 }
 
 .categories {
+  margin-left: -5.5em;
   margin-top: 1em;
   margin-bottom: 1.5em;
   display: flex;
@@ -47,6 +57,24 @@ h3.header:hover {
 .author,
 .time {
   display: inline-block;
+}
+
+.votes {
+  display: flex;
+  justify-content: flex-start;
+}
+
+.vote-score {
+  background-color: #00b5ad;
+  color: white;
+  border-radius: 8px;
+  width: 30px;
+  line-height: 30px;
+  text-align: center;
+}
+
+div.content.votes {
+  margin-top: 0.6em;
 }
 
 .post-body,
@@ -100,8 +128,19 @@ i.red.thumbs.down {
   margin-left: 0.5em;
 }
 
+.add-post-menu,
+.edit-post-menu,
+.edit-comment-menu {
+  margin-right: -5.5em;
+  margin-bottom: 2em;
+}
+
 .add-post-form {
-  margin: 0 11em 0 11em;
+  margin: 0 14em 0 14em;
+}
+
+h1.ui.add-post-header {
+  margin-bottom: 1em;
 }
 
 .add-comments-form {
@@ -117,9 +156,10 @@ i.red.thumbs.down {
 }
 
 .sort {
-  margin-left: 7em;
   display: flex;
-  justify-content: center;
+  justify-content: flex-end;
+  margin-top: -4.7em;
+  margin-bottom: 5em;
   font-size: 10px;
   max-height: 0.5em;
 }
@@ -157,4 +197,62 @@ span.text:hover {
 }
 .back-btn {
   position: absolute;
+}
+
+@media (max-width: 1150px) {
+  .container {
+    margin-right: 4em;
+    margin-left: 4em;
+  }
+  .add-comments-form {
+    margin: 2em 8em 0 8em;
+  }
+}
+
+@media (max-width: 925px) {
+  .container {
+    margin-right: 1em;
+    margin-left: 1em;
+  }
+}
+
+@media (max-width: 825px) {
+  .container {
+    margin-right: 0;
+    margin-left: 0;
+  }
+  .categories {
+    margin-left: -6.5em;
+  }
+  .add-comments-form {
+    margin: 2em 6em 0 6em;
+  }
+}
+
+@media only screen and (min-width: 768px) {
+  .ui.selection.dropdown .menu {
+    max-height: 12rem;
+  }
+}
+
+@media (max-width: 775px) {
+  .categories {
+    margin-left: -7.5em;
+  }
+  .sort {
+    margin-right: -5em;
+  }
+}
+
+@media (max-width: 680px) {
+  .categories {
+    margin-left: -1.5em;
+  }
+  .sort {
+    margin-right: 1.5em;
+    margin-top: 0em;
+  }
+  .menu-btn {
+    max-width: 3.5em;
+  }
 }
