--- a/src/App.css
+++ b/src/App.css
@@ -2,9 +2,23 @@ body {
   background-color: #fcf8f8;
 }
 
+.content-wrapper {
+  margin-top: 3em;
+  margin-left: 8em;
+  margin-right: 8em;
+}
+
 .container {
   margin-right: 10em;
   margin-left: 10em;
+}
+
+.header-section {
+  margin-bottom: 3em;
+}
+
+a:focus {
+  color: transparent;
 }
 
 /*Mobile Hamburger Button */
@@ -26,14 +40,34 @@ i.sidebar.icon {
   background-color: #009c95;
 }
 
+i.close.icon {
+  color: #fff;
+  text-shadow: none;
+  padding-top: 0.1em !important;
+}
+
+.close-btn {
+  padding-top: 0.3em !important;
+  padding-bottom: 0.2em !important;
+}
+
+/*Change color of Menu-items (buttons) on hover */
+.ui.icon.menu .item:hover,
+.ui.inverted.menu a.item:hover {
+  background-color: #00b5ad;
+}
+
+/*Change text color when hovering over mobile menu items */
+.ui.inverted.icon.menu .item:hover,
+i.close.icon:hover {
+  color: #ccc;
+}
+
 /*Menu Button for desktop Menu*/
 .menu-btn {
   min-width: 6em;
 }
 
-.header-section {
-  margin-top: 3em;
-}
 .ui.centered.header,
 .header-categories {
   text-align: center;
@@ -43,6 +77,7 @@ h3.header-categories {
   margin-bottom: 1em;
 }
 
+/*Wraps around the Desktop Menu buttons*/
 .categories {
   margin-left: -5.5em;
   margin-top: 1em;
@@ -219,30 +254,49 @@ span.text:hover {
 }
 
 @media (max-width: 1150px) {
+  .content-wrapper {
+    margin-top: 3em;
+    margin-left: 6em;
+    margin-right: 6em;
+  }
   .container {
     margin-right: 4em;
     margin-left: 4em;
+  }
+  .categories {
+    margin-left: -7.5em;
+  }
+
+  .sort {
+    margin-right: 4em;
   }
   .add-comments-form {
     margin: 2em 8em 0 8em;
   }
 }
 
-@media (max-width: 925px) {
+@media (max-width: 960px) {
+  .content-wrapper {
+    margin-top: 2.5em;
+    margin-left: 5em;
+    margin-right: 5em;
+  }
   .container {
     margin-right: 1em;
     margin-left: 1em;
   }
 }
 
-@media (max-width: 825px) {
+@media (max-width: 900px) {
+  .content-wrapper {
+    margin-left: 3em;
+    margin-right: 3em;
+  }
   .container {
     margin-right: 0;
     margin-left: 0;
   }
-  .categories {
-    margin-left: -6.5em;
-  }
+
   .add-comments-form {
     margin: 2em 6em 0 6em;
   }
@@ -255,15 +309,16 @@ span.text:hover {
 }
 
 @media (max-width: 775px) {
-  .categories {
-    margin-left: -7.5em;
-  }
   .sort {
     margin-right: -5em;
   }
 }
 
 @media (max-width: 680px) {
+  .content-wrapper {
+    margin-left: 1em;
+    margin-right: 1em;
+  }
   .categories {
     margin-left: -1.5em;
   }
@@ -273,5 +328,8 @@ span.text:hover {
   }
   .menu-btn {
     max-width: 3.5em;
+  }
+  .ui.teal.raised.segment {
+    width: 85%;
   }
 }
