--- a/src/App.css
+++ b/src/App.css
@@ -15,6 +15,11 @@ body {
 
 .header-section {
   margin-bottom: 3em;
+  margin-top: 2em;
+}
+
+.editpost-header {
+  margin-bottom: 2em;
 }
 
 a:focus {
@@ -190,7 +195,7 @@ i.red.thumbs.down {
 }
 
 .add-post-form {
-  margin: 0 14em 0 14em;
+  margin: 3em 16em 0 16em;
 }
 
 h1.ui.add-post-header {
@@ -297,6 +302,10 @@ span.text:hover {
     margin-left: 0;
   }
 
+  .add-post-form {
+    margin: 2em 12em 0 12em;
+  }
+
   .add-comments-form {
     margin: 2em 6em 0 6em;
   }
@@ -312,12 +321,20 @@ span.text:hover {
   .sort {
     margin-right: -5em;
   }
+  .add-post-form {
+    margin: 2em 8em 0 8em;
+  }
+  .editpost-header {
+    margin-bottom: 0;
+  }
 }
 
 @media (max-width: 680px) {
   .content-wrapper {
-    margin-left: 1em;
-    margin-right: 1em;
+    margin: 0.5em 1em 0 1em;
+  }
+  .header-section {
+    margin-bottom: 0;
   }
   .categories {
     margin-left: -1.5em;
@@ -331,5 +348,52 @@ span.text:hover {
   }
   .ui.teal.raised.segment {
     width: 85%;
+  }
+  .add-post-form {
+    margin: 1.5em 5em 0 5em;
+  }
+}
+
+@media (max-width: 500px) {
+  .add-post-form {
+    margin: 0.8em 2.5em 0 2.5em;
+  }
+  .sort {
+    margin-top: -2em;
+    margin-bottom: 3em;
+  }
+  div.header {
+    padding: 0.5em 0 0.3em 0.4em;
+    font-size: 1.4em;
+  }
+  .author,
+  .time,
+  .votes {
+    margin: 0 0 0.2em 0;
+  }
+  .comments {
+    margin: -2em 0 1em 10em;
+  }
+  .ui.teal.raised.segment {
+    width: 90%;
+  }
+}
+
+@media (max-width: 400px) {
+  .post-btn-wrapper {
+    margin-left: 1em;
+    margin-right: 1em;
+  }
+}
+
+@media (max-width: 360px) {
+  post-btn-wrapper {
+    margin: 0em;
+  }
+  .ui.teal.raised.segment {
+    width: 95%;
+  }
+  .btn-add {
+    margin-left: 1em;
   }
 }
