--- a/src/components/home-page/home-page.scss
+++ b/src/components/home-page/home-page.scss
@@ -1,13 +1,13 @@
 .content-wrapper {
-  margin: 3em 8em 0 8em;
+  margin: 3rem 8rem 0 8rem;
 
   .container {
     text-align: center;
   }
 
   .header-section {
-    margin-bottom: 2em;
-    margin-top: 2em;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
     display: flex;
     justify-content: center;
   }
