--- a/src/components/add-post/add-post.scss
+++ b/src/components/add-post/add-post.scss
@@ -1,7 +1,7 @@
 .add-post-form {
-  margin: 3em 16em 0 16em;
+  margin: 3rem 16rem 0 16rem;
 }
 
 h1.ui.add-post-header {
-  margin-bottom: 1em;
+  margin-bottom: 1rem;
 }
