--- a/src/App.scss
+++ b/src/App.scss
@@ -86,6 +86,11 @@ i.close.icon:hover {
 .comment-btn-wrapper {
   display: flex;
   justify-content: flex-end;
+ 
+}
+
+.ui.basic.red.button {
+  margin-right: 0.25rem;
 }
 
 .ui.basic.red.button.postdetail-deletepost-btn,
