--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,7 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import 'tailwindcss';
+
+@config '../tailwind.config.ts';
+
 @layer base {
   :root {
     --radius: 0.5rem
