--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,10 @@
 @import 'tailwindcss';
-
 @config '../tailwind.config.ts';
+
+@tailwind utilities;
 
 @layer base {
   :root {
-    --radius: 0.5rem
+    --radius: 0.5rem;
   }
 }
